# anima

./: .gitignore  README.md  STATE.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: block_inline_code_edits.py
anima/: cli.py  core.py  env.py  transcript.py
anima/llm/: __init__.py  anthropic_adapter.py  base.py  capture.py  fake_adapter.py  openai_adapter.py  openrouter_adapter.py  retry.py
anima/persistence/: __init__.py  store.py
anima/state/: __init__.py  drives.py  episodic.py  mood.py  narrative.py  relations.py  self_model.py  semantic.py
anima/subsystems/: _common.py  appraisal.py  errors.py  inner_monologue.py  memory_retrieval.py  perception.py  response_generator.py  user_prediction.py
anima_v1/: __init__.py  cli.py  core.py
anima_v1/config/: __init__.py  schema.py
anima_v1/llm/: __init__.py  anthropic_adapter.py  fake_adapter.py  openai_adapter.py  openrouter_adapter.py
anima_v1/state/: __init__.py  drives.py  mood.py  self_model.py
anima_v1/subsystems/: appraisal.py  inner_monologue.py  perception.py  response_generator.py  response_planner.py
docs/: audit_inventory.md  findings.md  glossary.md  master_plan.md  methodology.md  phase1_writeup.md  phase2_plan.md  testing.md
docs/analyses/: 2026-05-13_behavioral_divergence_verdict.md  2026-05-13_self_disclosure_replication_verdict.md  2026-05-14_cross_model_verdict.md  2026-05-14_deep_transcript_catacombs.md  2026-05-14_fresh_prompt_verdict.md  (+1 more)
personal_personas/: chat.py  iris.yaml  ophelia.yaml  roisin.yaml  vesper.yaml  wren.yaml
verification_v1/: baseline.py  battery.py
(+224 files in other folders)
