[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anima"
version = "0.1.0"
description = "Cognitive architecture wrapper around a pre-existing LLM for behavioral simulation of psychologically-grounded persons."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
anima = "anima.cli:main"

[tool.setuptools.packages.find]
include = ["anima*", "verification*"]

[tool.ruff]
line-length = 110
target-version = "py311"
